--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -684,3 +684,137 @@ footer > div ul li a:visited:active {
     width: 100px;
   }
 }
+
+#portfolio-gallery {
+  margin: 40px 20px 0px 20px;
+}
+@media (min-width: 1200px) {
+  #portfolio-gallery #filter-container {
+    display: grid;
+    grid-template-columns: auto 1000px auto;
+    grid-template-areas: ". gallery .";
+  }
+}
+#portfolio-gallery #filter-container #gallery {
+  grid-area: gallery;
+  width: 100%;
+  display: grid;
+  grid-template-rows: repeat(12, 300px);
+  gap: 40px;
+}
+@media (min-width: 768px) {
+  #portfolio-gallery #filter-container #gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 300px);
+    gap: 40px;
+  }
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(8, 300px);
+    gap: 40px;
+    grid-template-areas: "g1 g2" "g1 g3" "g5 g4" "g6 g4" "g7 g8" "g7 g9" "g11 g10" "g12 g10";
+  }
+}
+#portfolio-gallery #filter-container #gallery li {
+  width: 100%;
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery li:nth-child(1) {
+    grid-area: g1;
+  }
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery li:nth-child(2) {
+    grid-area: g2;
+  }
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery li:nth-child(3) {
+    grid-area: g3;
+  }
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery li:nth-child(4) {
+    grid-area: g4;
+  }
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery li:nth-child(5) {
+    grid-area: g5;
+  }
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery li:nth-child(6) {
+    grid-area: g6;
+  }
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery li:nth-child(7) {
+    grid-area: g7;
+  }
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery li:nth-child(8) {
+    grid-area: g8;
+  }
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery li:nth-child(9) {
+    grid-area: g9;
+  }
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery li:nth-child(10) {
+    grid-area: g10;
+  }
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery li:nth-child(11) {
+    grid-area: g11;
+  }
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery li:nth-child(12) {
+    grid-area: g12;
+  }
+}
+#portfolio-gallery #filter-container #gallery li a:link, #portfolio-gallery #filter-container #gallery li a:visited {
+  color: #000;
+  text-decoration: none;
+  height: 100%;
+  width: 100%;
+  display: inline-block;
+}
+#portfolio-gallery #filter-container #gallery li .portfolio-project-container {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-rows: auto 35px 30px;
+  grid-template-areas: "image" "title" "tag";
+}
+#portfolio-gallery #filter-container #gallery li .portfolio-project-container .portfolio-cover-image {
+  background-size: cover;
+  background-position: center;
+  grid-area: image;
+}
+#portfolio-gallery #filter-container #gallery li .portfolio-project-container .portfolio-title {
+  padding-top: 15px;
+  grid-area: title;
+  text-align: left;
+  font-size: 0.9em;
+}
+@media (min-width: 1024px) {
+  #portfolio-gallery #filter-container #gallery li .portfolio-project-container .portfolio-title {
+    font-size: 1em;
+  }
+}
+#portfolio-gallery #filter-container #gallery li .portfolio-project-container .portfolio-tags {
+  grid-area: tag;
+  text-align: left;
+  font-size: 0.85em;
+  color: #8F8F8F;
+}
