--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -21,3 +21,10 @@
 // Sections Styles
 @import "sections/_portfolio_hero";
 @import "sections/_portfolio_controls";
+
+// Grids Styles
+@import "grids/_all_filter";
+@import "grids/_branding_filter";
+@import "grids/_exhibit_filter";
+@import "grids/_print_filter";
+@import "grids/_web_filter";
