--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -20,6 +20,7 @@ $screen-xl-min: 1200px;
 $white: #fff;
 $black: #000;
 $orange: #F2633F;
+$light-orange: #FFA48D;
 $charcoal: #2C2C30;
 $gray: #8F8F8F;
 $light-gray: #C4C4C4;
