--- a/dev/scss/grids/_all_filter.scss
+++ b/dev/scss/grids/_all_filter.scss
@@ -132,6 +132,11 @@
                         background-size: cover ;
                         background-position: center ;
                         grid-area: image ;
+                        &:hover{
+                            transform:scale(1.02);
+                            box-shadow: 0px 0px 20px -9px #000000;
+                            transition: 0.25s;
+                          }
                     }
                     .portfolio-title{
                         padding-top: 15px;
