--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -2,41 +2,48 @@
     Footer
 ============= */
 footer {
-    background-color: $white;
-    display: grid;
-    grid-template-areas: ". footer .";
-    grid-template-columns: 10px auto 10px;
-    padding: 45px 0 40px;
-    text-align: center;
+    margin-top: 10%;
+    hr{
+        margin-top: 10%;
+        border-top: 2.5pt;
+        border-color: $light-gray;
+        width: 80%;
+        display: flex;
+        justify-content: center;
+    }  
 
     >div {
-        grid-area: footer;
-
-        h1 {
-            font-size: rem-calc(20);
+        padding: 2%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+ 
+        
+        h5 {
+            font-size: 1em;
             margin-bottom: 10px;
+            color: $orange;
 
-            span {
-                color: $white;
-            }
+           
         }
 
         ul {
             display: flex;
-            justify-content: center;
+            justify-content: space-around;
 
             li {
                 margin: 0 10px;
 
                 a:link,
                 a:visited {
-                    color: $black;
-                    font-size: rem-calc(30);
+                    padding: 10px;
+                    color: $orange;
+                    font-size: 1.5em;
                     transition: 0.25s;
 
                     &:hover,
                     &:active {
-                        color: $white;
+                        color: $light-orange;
                     }
                 }
 
